# job_search_project

./: .env.example  .gitignore  README.md  pyproject.toml
src/job_search_project/: config.py  main.py  utils.py
src/job_search_project/api/: hh_api.py
src/job_search_project/db/: db_manager.py  db_utils.py  schema.py
src/job_search_project/models/: vacancy.py
